--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
+<!-- Header with Navbar Section Begins  --------------------------------------------------------->
 <%- include("partials/header") -%> <% if(navCheck){ %> <%- include("partials/navbarLogout") -%>
 <h5
 	class="text-right"
@@ -6,7 +7,9 @@
 	<%= clientDisplayName %>
 </h5>
 <%}%> <% if(!navCheck) {%> <%- include("partials/navbarLogin") -%> <%}%>
-<!-- service section begins -->
+<!-- Header with Navbar Section Ends  --------------------------------------------------------->
+
+<!-- Service Section Begins  --------------------------------------------------------->
 <section class="container services-section text-center">
 	<h1 class="sec-title">Invest In Your Convenience</h1>
 	<h5 class="">Select Your Fixer Service Type</h5>
@@ -98,27 +101,26 @@
 		<div class="row row-fixers-ready-to">
 			<div class="col-lg-6 text-left">
 				<ul>
-					<li>Unclog your sink</li>
+					<li>Unclog Your Sink</li>
 					<li>Assemble Furniture</li>
-					<li>Fix your leak</li>
-					<li>Build a tree house</li>
+					<li>Fix Your Leak</li>
+					<li>Build a Tree House</li>
 				</ul>
 			</div>
 			<div class="col-lg-6 text-left">
 				<ul>
-					<li>Mow your lawn</li>
-					<li>Plant flowers</li>
-					<li>Run your errands</li>
-					<li>Clean your house</li>
+					<li>Mow Your Lawn</li>
+					<li>Plant Flowers</li>
+					<li>Run Your Errands</li>
+					<li>Clean Your House</li>
 				</ul>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- end of service section -->
+<!-- Service Section Ends  --------------------------------------------------------->
 
-<!-- How it Works section begins -->
-
+<!-- How it Works Section Begins  --------------------------------------------------------->
 <section class="works-sec">
 	<img
 		class="works-bk-img"
@@ -184,9 +186,9 @@
 		alt="color and shape background"
 	/>
 </section>
-<!-- end of How it Works section -->
+<!-- How it Works Section Ends  --------------------------------------------------------->
 
-<!-- LeaderShip section begins -->
+<!-- LeaderShip Section Begins  --------------------------------------------------------->
 <section class="leadership text-center">
 	<h1 class="sec-title">LeaderShip</h1>
 	<h5 class=" rw">We Revolutionize</h5>
@@ -218,17 +220,15 @@
 				/>
 				<h5 class="name">Kathy Lambert</h5>
 				<p class="bio-text">
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-					a galley of type and scrambled it to make a type specimen book.
+						Kathy Lambert is an intellectually curious individual with an insatiable desire to understand. She utilizes her diverse background, experiences, and skills to help be a resourceful, organized and forward-thinking project manager, web designer, and software developer.  Passionate about creating applications which are tools of efficiency in people's lives.  Giving time back for what matter's most in life.
 				</p>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- end of LeaderShip section -->
+<!-- LeaderShip Section Ends  --------------------------------------------------------->
 
-<!-- Our Mission section begins -->
+<!-- Our Mission Section Begins  --------------------------------------------------------->
 <section class="mission">
 	<h1 class="sec-title rw">Our Mission</h1>
 	<h5 class=" rw">What We Believe In</h5>
@@ -242,9 +242,9 @@
 		specimen book.
 	</p>
 </section>
-<!-- end of Our Mission section -->
+<!-- Our Mission Section Ends  --------------------------------------------------------->
 
-<!-- Contact Us section begins -->
+<!-- Contact Us Section Begins  --------------------------------------------------------->
 <section class="container contact-us text-center">
 	<h1 class="sec-title">Contact Us</h1>
 	<form action="/contact" method="post" class="text-left">
@@ -267,7 +267,7 @@
 				class="form-control"
 				id="exampleInputSubject"
 				aria-describedby="emailHelp"
-				placeholder="Question about your service"
+				placeholder="Service Questions"
 				name="contactSubject"
 				required
 			/>
@@ -275,7 +275,7 @@
 		<div class="form-group">
 			<label for="exampleFormControlTextarea1" class="form-heading" required>Message</label>
 			<textarea
-				placeholder="Your message starts with..."
+				placeholder="Tell us what is on your mind ..."
 				class="form-control"
 				id="exampleFormControlTextarea1"
 				rows="8"
@@ -292,6 +292,6 @@
 		</button>
 	</form>
 </section>
-<!-- contact section ends -->
+<!-- Contact Us Section Ends  --------------------------------------------------------->
 
 <%- include("partials/footer") -%>
