--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,25 +5,28 @@
     <div class="row">
       <div class="col f1">
         <p style="line-height:1;"></p>
-        <p class="footer-copyright-text">AssistU &copy;2019
+        <p class="footer-copyright-text">AssistU&copy;2019
           <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
-          Chingu Voyage10 Team #14 🇮🇳 & 🇺🇸
+          ChinguVoyage10Team #14 🇮🇳 & 🇺🇸
           </a>
         </p>
       </div>
       <div class="col f1" >
           <p style="line-height:1;"></p>
-        <p class="footer-copyright-text text-center" style="font-display: inline-block">Made with ❤️, lots of ☕️ & Chingu</p><br/>
+        <p class="footer-copyright-text text-center mobile" style="font-display: inline-block">Made with ❤️, lots of ☕️ & Chingu</p><br/>
       </div>
       <div class="col social-icons">
         <a href="#">
-          <img src="images/social-media/twitter.png" width="30" height="30" alt="twitter-icon">
+            <i class="fab fa-twitter" style="margin-right:5%; font-size: 1.5rem;" class="socmed-icon"></i>
+          <!-- <img src="images/social-media/twitter.png" width="30" height="30" alt="twitter-icon"> -->
         </a>
         <a href="#">
-          <img src="images/social-media/facebook.png" width="30" height="30" alt="facebook=icon">
+            <i class="fab fa-facebook-f" style="margin-right:5%; font-size: 1.5rem;" class="socmed-icon"></i>
+          <!-- <img src="images/social-media/facebook.png" width="30" height="30" alt="facebook=icon"> -->
         </a>
         <a href="#">
-          <img src="images/social-media/instagram.png" width="30" height="30" alt="instagram-icon">
+            <i class="fab fa-instagram" style="margin-right:5%; font-size: 1.5rem;" class="socmed-icon"></i>
+          <!-- <img src="images/social-media/instagram.png" width="30" height="30" alt="instagram-icon"> -->
         </a>
       </div>
     </div>
