--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,6 +112,9 @@ li {
 .service-img {
 	margin-top: 1.5rem;
 }
+.service-img:hover{
+	background-color:#e1e3f0;
+}
 .shadow {
 	box-shadow: 0 0.5rem 1rem #63152f80 !important;
 	border-radius: 2.5rem;
@@ -272,6 +275,7 @@ section.works-sec {
 	/* border: 10px double #8D5A97; */
 	border-radius: 8px;
 	background-color: #e1e3f0;
+	box-shadow: none;
   }
 .pressed-Service{
 	border-radius: 2.5rem;
