Update header.ejs head section

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
 		<meta property="og:title" content="AssistU | On-Demand Household and Personal Services" />
 		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
 		<meta property="og:description" content="AssistU | On-Demand Household and Personal Services" />
+		<meta name=”description” content=”AssistU | On-Demand Household and Personal Services” />
 		<meta property="og:type" content="website" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:locale" content="hi_IN" />
