--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -163,6 +163,7 @@ section.works-sec {
 }
 .work-text-left {
 	align-self: flex-start;
+	text-align: justify;
 }
 .work-text-right {
 	/* align-self: flex-end; */
