--- a/views/home.ejs
+++ b/views/home.ejs
@@ -135,47 +135,43 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<p class="work-text" style="text-align: justify">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-						has been the industry's standard dummy text ever since the 1500s, when an unknown
-						printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum
-						is simply dummy text of the printing and typesetting industry.
-					</p>
+						<p class="work-text" style="text-align: justify">
+								As easy as counting to four: 1, 2, 3, 4.  Invest in your convenience; book a Fixer to resolve your issues today. Step 1) Determine the type of service needed.  AssistU currently offers Fixers to take care of your Repair, Plumbing, Housekeeping, Administrative, Lawn Care, and Personal Driving needs and wants. Step 2) Select the Fixer of your choice, remembering to evaluate the Fixer’s hourly rate and customer service satisfaction rating during one’s selection.  
+						</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-sm-12">
-					<img id="circle-1" src="images/Circle-1.png" alt="Circle 1" />
-					<img class="line" src="images/rectangle-7.png" alt="line" />
-				</div>
-				<div class="col-lg-3 col-sm-12">
-					<img src="images/Circle-2.png" alt="Circle 2" />
-					<img class="line" src="images/rectangle-7.png" alt="line" />
-				</div>
-				<div class="col-lg-3 col-sm-12">
-					<img src="images/Circle-3.png" alt="Circle 3" />
-					<img class="line" src="images/rectangle-7.png" alt="line" />
-				</div>
-				<div class="col-lg-3 col-sm-12 margin-for-ipad ">
-					<img src="images/Circle-4.png" alt="Circle 4" />
-					<img class="line line-4-hide" src="images/rectangle-7.png" alt="line" />
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 col-sm-12">
+						<img id="circle-1" src="images/Circle-1.png" alt="Circle 1" />
+						<img class="line" src="images/rectangle-7.png" alt="line" />
+					</div>
+					<div class="col-lg-3 col-sm-12">
+						<img src="images/Circle-2.png" alt="Circle 2" />
+						<img class="line" src="images/rectangle-7.png" alt="line" />
+					</div>
+					<div class="col-lg-3 col-sm-12">
+						<img src="images/Circle-3.png" alt="Circle 3" />
+						<img class="line" src="images/rectangle-7.png" alt="line" />
+					</div>
+					<div class="col-lg-3 col-sm-12 margin-for-ipad ">
+						<img src="images/Circle-4.png" alt="Circle 4" />
+						<img class="line line-4-hide" src="images/rectangle-7.png" alt="line" />
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container ">
-			<div class="row work-btm-text">
-				<div class="col-lg-6 col-sm-12">
-					<h4 class="work-text-left work-text">
-						Select your fixer and complete reservation form.
-					</h4>
-				</div>
-				<div class="col-lg-6 col-sm-12">
-					<p class="work-text-right work-text">
-						Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta
-						nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
-					</p>
+			<div class="container ">
+				<div class="row work-btm-text">
+					<div class="col-lg-6 col-sm-12">
+						<h4 class="work-text-left work-text">
+							Determine your Fixer needs.  Select your Fixer and complete the booking process.
+						</h4>
+					</div>
+					<div class="col-lg-6 col-sm-12">
+						<p class="work-text-right work-text">
+								Step 3) Complete the booking form. Provide us with the Who, What, Where and When details needed for your service request.  Step 4) Lastly, confirm your Fixer request. If you have not already, join fellow satisfied AssistU Clients and register today! 
+						</p>
 				</div>
 			</div>
 		</div>
