--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -61,10 +61,10 @@
 			</div>
 			<div class="modal-body" style="background-color:#e1e3f0">
 			 <h4 class="card-title"><%= fixerData[i].fixerCompanyName %></h4>
-			 <h5>$ <%= fixerData[i].fixerFee %>/hour</h5>
+			 <h5>$ <%= fixerData[i].fixerFee %> per Hour</h5>
 			</div>
 			<div class="modal-footer">
-			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Select</button>
+			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Continue</button>
 			</div>
 		  </div>
 		</div>
@@ -76,8 +76,8 @@
 							<p class="card-text"><%= fixerData[i].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-							  <h5>$ <%= fixerData[i].fixerFee %>/hour</h5>
-							  <p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i].fixerRating%></small></p>
+							  <h5>$ <%= fixerData[i].fixerFee %> per Hour</h5>
+							  <p class="card-text"><small class="text-muted">Fixer Satisfaction Rating: <%= fixerData[i].fixerRating%></small></p>
 							</div>
 						</div>
 						<% if(fixerData[i+1]){ %>
@@ -94,10 +94,10 @@
 			</div>
 			<div class="modal-body" style="background-color:#e1e3f0">
 			 <h4 class="card-title"><%= fixerData[i+1].fixerCompanyName %></h4>
-			 <h5>$ <%= fixerData[i+1].fixerFee %>/hour</h5>
+			 <h5>$ <%= fixerData[i+1].fixerFee %> per Hour</h5>
 			</div>
 			<div class="modal-footer">
-			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Select</button>
+			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Continue</button>
 			</div>
 		  </div>
 		</div>
@@ -109,8 +109,8 @@
 							<p class="card-text"><%= fixerData[i+1].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-								<h5>$ <%= fixerData[i+1].fixerFee %>/hour</h5>
-								<p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i+1].fixerRating%></small></p>
+								<h5>$ <%= fixerData[i+1].fixerFee %> per Hour</h5>
+								<p class="card-text"><small class="text-muted">Fixer Satisfaction Rating: <%= fixerData[i+1].fixerRating%></small></p>
 							  </div>
 						</div>
 						<% } %>
@@ -128,10 +128,10 @@
 			</div>
 			<div class="modal-body" style="background-color:#e1e3f0">
 			 <h4 class="card-title"><%= fixerData[i+2].fixerCompanyName %></h4>
-			 <h5>$ <%= fixerData[i+2].fixerFee %>/hour</h5>
+			 <h5>$ <%= fixerData[i+2].fixerFee %> per Hour</h5>
 			</div>
 			<div class="modal-footer">
-			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Select</button>
+			  <button type="button" style="margin:0; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem; " class="btn fixer-btn" data-dismiss="modal">Continue</button>
 			</div>
 		  </div>
 		</div>
@@ -143,8 +143,8 @@
 							<p class="card-text"><%= fixerData[i+2].fixerDescription %></p>
 						</div>
 						  <div class="card-footer bg-light" style="border-radius: 0 0 3rem 3rem">
-								<h5>$ <%= fixerData[i+2].fixerFee %>/hour</h5>
-								<p class="card-text"><small class="text-muted">User Ratings: <%= fixerData[i+2].fixerRating%></small></p>
+								<h5>$ <%= fixerData[i+2].fixerFee %> per Hour</h5>
+								<p class="card-text"><small class="text-muted">Fixer Satisfaction Rating: <%= fixerData[i+2].fixerRating%></small></p>
 							  </div>
 						</div>
 						<br /> <br />
@@ -264,7 +264,7 @@
 				<br />
 <!-- How Form Section Begins------------------------------------------------------->
 				<h3 class="booking-sec-title text-left">How</h3>
-				<p>Please describe your expectations and or notes for your selected Fixer and if any responsibilities you will provide.</p>
+				<p>Please describe your expectations and or provide notes for your selected Fixer and if any responsibilities you will provide.</p>
 				<div class="form-row row1">
 					<div class="col-lg-12 form-group">
 						<!-- <label for="fixerExpec"></label> -->
