Update placeholder text on the Login Success Page

--- a/views/loginSuccess.ejs
+++ b/views/loginSuccess.ejs
@@ -4,8 +4,7 @@
 <div class="thanks-center">
 	<h2 class="display-4">Login Successful!</h2>
 	<p class="lead">
-		Please return to the home page and begin placing orders and then visit the order history list
-		page to see your orders.
+		Please return to the home page and begin placing orders, then visit the order history page to see your orders.
 	</p>
 	<a
 		class="btn btn-primary btn-lg"
