update landing/home page Our Mission and Bio section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -206,9 +206,7 @@
 				/>
 				<h5 class="name">Vaibhav Srivastava</h5>
 				<p class="bio-text">
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-					a galley of type and scrambled it to make a type specimen book.
+					Vaibhav Srivastava is a self-taught full-stack web developer passionate about building appealing, high-performance and easy-to-use applications on top of cutting-edge tech stacks.  Embracing self-learning, he loves to adopt new tech stacks and bring the most productive outcome with it. He has a strong belief that codes and automation actually aim to solve real-world problems most efficient manner. 
 				</p>
 			</div>
 			<div class="col-lg-6 bio-div">
@@ -239,12 +237,8 @@
 	<h5 class=" rw">What We Believe In</h5>
 
 	<p class="rw" style="text-align: justify">
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-		the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-		of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the
-		printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
-		since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-		specimen book.
+		With AssistU, we serve the labor needs of the urban society by providing certain services that are required on a daily basis at a large scale but common people don't find enough time to do it properly. There are certain services that the busy working members of the family require daily but do not find sufficient time to do, most of the time, they find various issues in hiring regular workers. With AssistU, we solve this problem of the urban household by providing these services on a common platform ensuring the best quality work right at the house of common people so as to make their life easy and comfortable, generating large employment at the same time. 
+We look forward to making it a big User-Fixer communication and Booking platform to ease the life of clients and provide maximum employment opportunities to skilled fixers.
 	</p>
 </section>
 <!-- Our Mission Section Ends  --------------------------------------------------------->
