--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,10 +13,10 @@
 			property="og:image"
 			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
 		/>
-		<meta property="og:title" content="AssistU | On-Demand Fixer Services" />
+		<meta property="og:title" content="AssistU | Services Booking System" />
 		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
-		<meta property="og:description" content="AssistU | On-Demand Household and Personal Services" />
-		<meta name=”description” content=”AssistU | On-Demand Household and Personal Services” />
+		<meta property="og:description" content="On-Demand Household and Personal Services Booking System" />
+		<meta name=”description” content=”AssistU | On-Demand Household & Personal Services Booking System” />
 		<meta property="og:type" content="website" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:locale" content="hi_IN" />
@@ -38,7 +38,7 @@
 			content="Kathy Lambert GitHub Portfolio"
 			href="https://github.com/CodeMeKathy"
 		/>
-		<title>AssistU | On-Demand Household and Personal Services</title>
+		<title>AssistU | On-Demand Household & Personal Services Booking System</title>
 		<!-- font-awesome -->
 		<link href="css/fa-all.css" rel="stylesheet" />
 		<!-- favicon -->
