Update README.md with user auth feature changes

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -195,7 +195,7 @@
 							type="text"
 							class="form-control"
 							id="inputState"
-							placeholder="State Initials"
+							placeholder="State"
 							name="state"
 							required
 						/>
