Update service-img to include grab cursor in home.ejs and styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,6 +111,7 @@ li {
 }
 .service-img {
 	margin-top: 1.5rem;
+	cursor: -webkit-grab; cursor: grab;
 }
 .service-img:hover{
 	background-color:#e1e3f0;
