Add mailto subject in forget password link

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -71,7 +71,7 @@
 						Login
 					</button>
 					<p>
-						<a href="mailto:assistupro@gmail.com" style="font-family: 'Fredoka One', cursive; color: #63032e;"
+						<a href="mailto:assistupro@gmail.com?Subject=Forgot%20Password" style="font-family: 'Fredoka One', cursive; color: #63032e;"
 							>Forget Password?</a
 						>
 					</p>
