--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-		<!-- Social Media Share Links -->
+	<!-- Social Media Share Links -->
+		<!-- WhatsApp -->
 		<meta 
 			property="image"
 			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
 		/>
+		<!-- LinkedIn, Facebook, Etc. -->
 		<meta
 			property="og:image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/readmeUpdates2/public/images/helpingHands-1280.png"
 		/>
 		<meta property="og:title" content="AssistU | Services Booking System" />
 		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
