Update booking procedure section

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -41,7 +41,7 @@
 <!-- What Form Section Begins------------------------------------------------------->
 		<div class="col-lg-12 text-left">
 			<h3 class=" sec-title text-left">What</h3>
-			<p>Please select a Fixer for your service needs from the list.</p>
+			<p>Please choose a Fixer for your service needs from the list.</p>
 			<br/>
 			<form action="/selectedFixer" method="post" id="selectFixerForm">
 				<input type="hidden" name="selectedFixer" id="fixerInput" value="no-fixer">
