Update Vai LeadShip section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -202,7 +202,7 @@
 				/>
 				<h5 class="name">Vaibhav Srivastava</h5>
 				<p class="bio-text">
-					Vaibhav Srivastava is a self-taught full-stack web developer passionate about building appealing, high-performance and easy-to-use applications on top of cutting-edge tech stacks. Embracing self-learning, he loves to adopt new tech stacks and bring the most productive outcome with it. He has a strong belief that codes and automation actually aim to solve real-world problems in the most efficient manner. 
+					Vaibhav Srivastava is a self-taught full-stack web developer passionate about building appealing, high-performance and easy-to-use applications on top of cutting-edge tech stacks. Embracing self-learning, he loves to adopt new tech stacks and bring the most productive outcome with it. He has a strong belief that through code and automation, one can aim to solve real-world problems in the most efficient manner. 
 				</p>
 			</div>
 			<div class="col-lg-6 bio-div">
