Update mission section in home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -233,8 +233,16 @@
 	<h5 class=" rw">What We Believe In</h5>
 
 	<p class="rw" style="text-align: justify">
-		With AssistU, we serve the labor needs of the urban society by providing certain services that are required on a daily basis at a large scale but common people don't find enough time to do it properly. There are certain services that the busy working members of the family require daily but do not find sufficient time to do, most of the time, they find various issues in hiring regular workers. With AssistU, we solve this problem of the urban household by providing these services on a common platform ensuring the best quality work right at the house of common people so as to make their life easy and comfortable, generating large employment at the same time. 
-We look forward to making it a big User-Fixer communication and Booking platform to ease the life of clients and provide maximum employment opportunities to skilled fixers.
+		
+			AssistU provides the many services that the busy working members of the family frequently require, but do not have sufficient time and or the skill set to complete. Most of the time, it can be a problematic and tedious process to find and hire routine workers. 
+	</p>
+	<p class="rw" style="text-align: justify">
+
+			AssistU solves these problems of the modern households and families by providing the services of skilled and experienced Fixers on a common platform, ensuring the best quality work at the tips of your fingers.
+	</p>
+	<p class="rw" style="text-align: justify">
+		
+			We look forward to creating an environment of transparency where Fixers and Clients can communicate their service needs and expectations.  A place where Clients can improve the overall quality of their lives by finding and utilizing highly trained Fixers to accomplish the unwanted tasks in their lives.   All while creating a new stream of employment and opportunities for Fixers within their communities.
 	</p>
 </section>
 <!-- Our Mission Section Ends  --------------------------------------------------------->
