Change og:image amd image favicon links

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,15 +6,11 @@
 
 	<!-- Social Media Share Links -->
 			<!-- LinkedIn, Facebook, Etc. -->
-			<meta
-			property="og:image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/da6f61e8829aaf253b9237bd4cf5578cf4887db7/public/images/helpingHands-1280.png"
-		/>
+		<meta name="image" property="og:image" content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/da6f61e8829aaf253b9237bd4cf5578cf4887db7/public/images/helpingHands-1280.png">
+
 		<!-- WhatsApp -->
-		<meta 
-			property="image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/103e80cb2a0834f72ed4d093d59ebcb74a003466/public/images/helpingHands-300-200.png"
-		/>
+		<meta name="image" property="image" content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/103e80cb2a0834f72ed4d093d59ebcb74a003466/public/images/helpingHands-300-200.png">
+		
 
 		<meta property="og:title" content="AssistU | Services Booking System" />
 		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
