--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,10 +6,10 @@
 
 	<!-- Social Media Share Links -->
 			<!-- LinkedIn, Facebook, Etc. -->
-		<meta name="image" property="og:image" content="/favicon-32x32.png?v1=m2RldnYGv6">
+		<meta name="image" property="og:image" content="images/helpingHands-1280.png">
 
 		<!-- WhatsApp -->
-		<meta name="image" property="image" content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/103e80cb2a0834f72ed4d093d59ebcb74a003466/public/images/helpingHands-300-200.png">
+		<meta name="image" property="image" content="images/helpingHands-300-200.png">
 		
 
 		<meta property="og:title" content="AssistU | Services Booking System" />
