Change header favicon link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,6 +48,7 @@
 		<link rel="manifest" href="/site.webmanifest?v1=m2RldnYGv6">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg?v1=m2RldnYGv6" color="#907f9f">
 		<link rel="shortcut icon" href="/favicon.ico?v1=m2RldnYGv6">
+		<meta name="apple-mobile-web-app-title" content="AssistU | On-Demand Household & Personal Services Booking System">
 		<meta name="msapplication-TileColor" content="#f1f7f0">
 		<meta name="theme-color" content="#f1f7f0">
 		
