--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -582,7 +582,7 @@ i{
 /* @media (max-width: 1900px) and (min-width: 1800px) {
 	
 } */
-/* ipad and ipad pro */
+/* iPad and iPad Pro */
 @media(max-width:1030px)and (min-width:630px){
 	.reg-quote1{
 		position: absolute;
@@ -621,7 +621,7 @@ i{
 	}
 }
 
-/* Mobile only */
+/* Mobile Queries */
 @media (max-width:420px) and (min-width:350px){
 	.history-card-img{
 		border-radius: 2rem 2rem 0 0;
